--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -84,6 +84,16 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:paddingBottom">7dp</item>
     </style>
+    <style name="red_warn">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:text">!</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:visibility">invisible</item>
+    </style>
 
 
 </resources>
