--- a/project/app/src/main/res/layout/activity_cregistration.xml
+++ b/project/app/src/main/res/layout/activity_cregistration.xml
@@ -15,7 +15,7 @@ tools:context=".C_Registration">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello ! Register to get started"
+        android:text="Hello! Register to get started"
         style="@style/label_heading"
         android:id="@+id/lbHeading_login"
         android:padding="40sp"
@@ -119,20 +119,38 @@ tools:context=".C_Registration">
         android:layout_marginBottom="20dp"
         android:background="@drawable/edit_text_background"
         android:hint="Buisness name"
-        android:inputType="textEmailAddress"
+
         android:textColorHint="@color/et_hint"
         android:visibility="invisible"/>
 
+    <EditText
+        android:id="@+id/tbJobcode"
+        style="@style/et_Text"
+        android:layout_width="330dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/tbEmail_r"
+        android:layout_centerInParent="true"
+
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/edit_text_background"
+        android:hint="Job code"
+        android:visibility="invisible"
+        android:textColorHint="@color/et_hint"/>
+
+
     <Button
-        android:id="@+id/btLogin"
+        android:id="@+id/btRegister"
         android:layout_width="300sp"
         android:layout_height="50sp"
         android:layout_below="@id/tbBuisness_name"
         android:layout_centerInParent="true"
-        android:layout_marginStart="20dp"
 
-        android:layout_marginEnd="30dp"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/bt_sec_color"
         android:text="Register"
         android:textSize="18sp" />
@@ -173,6 +191,11 @@ tools:context=".C_Registration">
         android:layout_marginTop="530dp"/>
     <TextView
         android:id="@+id/wlb_bname"
+        style="@style/red_warn"
+        android:layout_toEndOf="@+id/tbfirstname_login_r"
+        android:layout_marginTop="600dp"/>
+    <TextView
+        android:id="@+id/wlb_jobcode"
         style="@style/red_warn"
         android:layout_toEndOf="@+id/tbfirstname_login_r"
         android:layout_marginTop="600dp"/>
