--- a/project/app/src/main/res/layout/fragment_user_details.xml
+++ b/project/app/src/main/res/layout/fragment_user_details.xml
@@ -62,7 +62,8 @@
             android:layout_below="@+id/lb_full_name"
             android:layout_toRightOf="@+id/ic_user_type"
             android:layout_marginTop="12dp"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:id="@+id/lb_userType"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -72,7 +73,7 @@
                 style="@style/user_details_icon"
                 android:src="@drawable/ic_mail"/>
             <TextView
-                android:id="@+id/lb_password"
+                android:id="@+id/lb_email"
                 style="@style/user_details"
                 android:text="JohnDoe@gmail.com"
                 android:layout_toRightOf="@id/ic_mail"/>
@@ -86,7 +87,7 @@
                 style="@style/user_details"
                 android:text="Change Password"
                 android:layout_toRightOf="@id/ic_password"
-                android:layout_below="@id/lb_password"
+                android:layout_below="@id/lb_email"
                 android:layout_marginTop="16dp"/>
             <ImageView
                 android:id="@+id/ic_bookings"
@@ -115,7 +116,8 @@
                 android:id="@+id/rl_contact_person"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/lb_address">
+                android:layout_below="@+id/lb_address"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/ic_contact_person"
@@ -130,24 +132,10 @@
                     android:layout_toRightOf="@id/ic_contact_person"
                     android:text="John" />
 
-                <ImageView
-                    android:id="@+id/ic_phone"
-                    style="@style/user_details_icon"
-                    android:layout_below="@id/ic_contact_person"
-                    android:layout_marginTop="20dp"
-                    android:src="@drawable/ic_phone" />
-
-                <TextView
-                    android:id="@+id/lb_c_phone"
-                    style="@style/user_details"
-                    android:layout_below="@id/lb_contact_person"
-                    android:layout_marginTop="20dp"
-                    android:layout_toRightOf="@id/ic_phone"
-                    android:text="John" />
             </RelativeLayout>
 
             <ImageView
-                android:layout_marginTop="300dp"
+                android:layout_marginTop="200dp"
                 android:id="@+id/ic_logout"
                 style="@style/user_details_icon"
                 android:src="@drawable/ic_log_out"
@@ -158,7 +146,7 @@
                 android:text="Log out"
                 android:layout_toRightOf="@id/ic_logout"
                 android:layout_below="@id/ic_bookings"
-                android:layout_marginTop="300dp"/>
+                android:layout_marginTop="200dp"/>
 
         </RelativeLayout>
     </RelativeLayout>
